--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1101,61 +1101,91 @@
     <table id="prescription_details">
       <phrase id="tblcaption" value="prescription details" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="S/NO" />
       </field>
       <field id="prescription_id">
-        <phrase id="fldcaption" value="prescription id" />
+        <phrase id="fldcaption" value="Prescription ID" />
       </field>
       <field id="medicine_stock_id">
-        <phrase id="fldcaption" value="medicine stock id" />
+        <phrase id="fldcaption" value="Medicine Brand" />
       </field>
       <field id="dose_quantity">
-        <phrase id="fldcaption" value="dose quantity" />
+        <phrase id="fldcaption" value="Dose Qty" />
       </field>
       <field id="dose_type">
-        <phrase id="fldcaption" value="dose type" />
+        <phrase id="fldcaption" value="Dose Type" />
+        <phrase id="fldtagvalue1" value="Mls" />
+        <phrase id="fldtagcaption1" value="Mls" />
+        <phrase id="fldtagvalue2" value="Pills" />
+        <phrase id="fldtagcaption2" value="Pills" />
+        <phrase id="fldtagvalue3" value="Rubs" />
+        <phrase id="fldtagcaption3" value="Rubs" />
       </field>
       <field id="dose_interval">
-        <phrase id="fldcaption" value="dose interval" />
+        <phrase id="fldcaption" value="Dose Interval" />
+        <phrase id="fldtagvalue1" value="1X a Day" />
+        <phrase id="fldtagcaption1" value="1X a Day" />
+        <phrase id="fldtagvalue2" value="2X a Day" />
+        <phrase id="fldtagcaption2" value="2X a Day" />
+        <phrase id="fldtagvalue3" value="3X a Day" />
+        <phrase id="fldtagcaption3" value="3X a Day" />
+        <phrase id="fldtagvalue4" value="4X a Day" />
+        <phrase id="fldtagcaption4" value="4X a Day" />
       </field>
       <field id="number_of_days">
         <phrase id="fldcaption" value="number of days" />
+        <phrase id="fldtagvalue1" value="7" />
+        <phrase id="fldtagcaption1" value="7" />
+        <phrase id="fldtagvalue2" value="1" />
+        <phrase id="fldtagcaption2" value="1" />
+        <phrase id="fldtagvalue3" value="2" />
+        <phrase id="fldtagcaption3" value="2" />
+        <phrase id="fldtagvalue4" value="3" />
+        <phrase id="fldtagcaption4" value="3" />
+        <phrase id="fldtagvalue5" value="4" />
+        <phrase id="fldtagcaption5" value="4" />
+        <phrase id="fldtagvalue6" value="5" />
+        <phrase id="fldtagcaption6" value="5" />
+        <phrase id="fldtagvalue7" value="6" />
+        <phrase id="fldtagcaption7" value="6" />
       </field>
       <field id="method">
         <phrase id="fldcaption" value="method" />
+        <phrase id="fldtagvalue1" value="Rubbing" />
+        <phrase id="fldtagcaption1" value="Rubbing" />
+        <phrase id="fldtagvalue2" value="Inhalation" />
+        <phrase id="fldtagcaption2" value="Inhalation" />
+        <phrase id="fldtagvalue3" value="Injection" />
+        <phrase id="fldtagcaption3" value="Injection" />
+        <phrase id="fldtagvalue4" value="Oral" />
+        <phrase id="fldtagcaption4" value="Oral" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Date Added" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="prescriptions">
-      <phrase id="tblcaption" value="prescriptions" />
+      <phrase id="tblcaption" value="Prescriptions" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="Prescription ID" />
       </field>
       <field id="patient_id">
-        <phrase id="fldcaption" value="patient id" />
+        <phrase id="fldcaption" value="Patient Name" />
       </field>
       <field id="visit_id">
-        <phrase id="fldcaption" value="visit id" />
-      </field>
-      <field id="prescription_title">
-        <phrase id="fldcaption" value="prescription title" />
-      </field>
-      <field id="lab_report_id">
-        <phrase id="fldcaption" value="lab report id" />
+        <phrase id="fldcaption" value="Visit ID" />
       </field>
       <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="Prescribed By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Prescription Date" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="radiology_reports">
