--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -120,7 +120,7 @@
       <phrase id="menutext" value="Radiology Requests" />
     </menu>
     <menu id="31">
-      <phrase id="menutext" value="radiology requests details" />
+      <phrase id="menutext" value="Radiology Test Details" />
     </menu>
     <menu id="32">
       <phrase id="menutext" value="Radiology Queue" />
@@ -583,30 +583,27 @@
       </field>
     </table>
     <table id="medical_schemes">
-      <phrase id="tblcaption" value="medical schemes" />
+      <phrase id="tblcaption" value="Medical Schemes" />
       <field id="id">
         <phrase id="fldcaption" value="id" />
       </field>
       <field id="company">
-        <phrase id="fldcaption" value="company" />
+        <phrase id="fldcaption" value="Company" />
       </field>
       <field id="phone">
-        <phrase id="fldcaption" value="phone" />
+        <phrase id="fldcaption" value="Phone" />
       </field>
       <field id="email_address">
-        <phrase id="fldcaption" value="email address" />
+        <phrase id="fldcaption" value="Email" />
       </field>
       <field id="physical_address">
-        <phrase id="fldcaption" value="physical address" />
-      </field>
-      <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="Physical Address" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Date Added" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="medicine_brands">
@@ -1221,51 +1218,42 @@
       </field>
     </table>
     <table id="radiology_requests">
-      <phrase id="tblcaption" value="radiology requests" />
+      <phrase id="tblcaption" value="Radiology Requests" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
-      </field>
-      <field id="test_title">
-        <phrase id="fldcaption" value="test title" />
+        <phrase id="fldcaption" value="Request ID" />
       </field>
       <field id="patient_id">
-        <phrase id="fldcaption" value="patient id" />
+        <phrase id="fldcaption" value="Patient Name" />
       </field>
       <field id="visit_id">
-        <phrase id="fldcaption" value="visit id" />
-      </field>
-      <field id="status">
-        <phrase id="fldcaption" value="status" />
+        <phrase id="fldcaption" value="Visit ID" />
       </field>
       <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="Submitted By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Submision Tim" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="radiology_requests_details">
-      <phrase id="tblcaption" value="radiology requests details" />
+      <phrase id="tblcaption" value="Radiology Test Details" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="S/NO" />
       </field>
       <field id="radiology_request_id">
-        <phrase id="fldcaption" value="radiology request id" />
+        <phrase id="fldcaption" value="Request ID" />
       </field>
       <field id="service_id">
-        <phrase id="fldcaption" value="service id" />
-      </field>
-      <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="Radiology Test" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Date Added" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="radiology_requests_queue">
@@ -1430,6 +1418,8 @@
         <phrase id="fldtagcaption7" value="Laboratorist" />
         <phrase id="fldtagvalue8" value="5" />
         <phrase id="fldtagcaption8" value="Pharmacist" />
+        <phrase id="fldtagvalue9" value="6" />
+        <phrase id="fldtagcaption9" value="Radiologist" />
       </field>
       <field id="is_verified">
         <phrase id="fldcaption" value="Active?" />
