--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -1,6 +1,6 @@
 <ew-language date="2024/11/29" id="en-US" author="e.World Technology Limited">
   <project>
-    <phrase id="bodytitle" value="AfyaPlus | Healthcare ERP Platform" />
+    <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
     <menu id="115">
       <phrase id="menutext" value="laboratory minor report" />
@@ -1229,10 +1229,10 @@
         <phrase id="fldcaption" value="Visit ID" />
       </field>
       <field id="created_by_user_id">
-        <phrase id="fldcaption" value="Submitted By" />
+        <phrase id="fldcaption" value="Requested By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="Submision Tim" />
+        <phrase id="fldcaption" value="Time" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
@@ -1257,30 +1257,43 @@
       </field>
     </table>
     <table id="radiology_requests_queue">
-      <phrase id="tblcaption" value="radiology requests queue" />
+      <phrase id="tblcaption" value="Radiology Queue" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="S/NO" />
       </field>
-      <field id="radiology_request_id">
-        <phrase id="fldcaption" value="radiology request id" />
+      <field id="radiology_requests_details_id">
+        <phrase id="fldcaption" value="Request Details ID" />
+      </field>
+      <field id="test_time">
+        <phrase id="fldcaption" value="Waiting Time" />
       </field>
       <field id="waiting_time">
-        <phrase id="fldcaption" value="waiting time" />
+        <phrase id="fldcaption" value="Waiting Time" />
       </field>
       <field id="waiting_interval">
-        <phrase id="fldcaption" value="waiting interval" />
+        <phrase id="fldcaption" value="Interval" />
+        <phrase id="fldtagvalue1" value="Hours" />
+        <phrase id="fldtagcaption1" value="Hours" />
+        <phrase id="fldtagvalue2" value="Minutes" />
+        <phrase id="fldtagcaption2" value="Minutes" />
+        <phrase id="fldtagvalue3" value="Days" />
+        <phrase id="fldtagcaption3" value="Days" />
       </field>
       <field id="status">
-        <phrase id="fldcaption" value="status" />
+        <phrase id="fldcaption" value="Status" />
+        <phrase id="fldtagvalue1" value="Done" />
+        <phrase id="fldtagcaption1" value="Done" />
+        <phrase id="fldtagvalue2" value="Cancelled" />
+        <phrase id="fldtagcaption2" value="Cancelled" />
       </field>
       <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="Submitted By" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Date Added" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="service_categories">
