--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -2,9 +2,6 @@
   <project>
     <phrase id="bodytitle" value="AfyaPlus | Healthcare Management Information System" />
     <phrase id="footertext" value="&amp;copy;2024 AfyaPlus. All rights reserved." />
-    <menu id="115">
-      <phrase id="menutext" value="laboratory minor report" />
-    </menu>
     <menu id="103">
       <phrase id="menutext" value="Administrator" />
     </menu>
@@ -27,7 +24,7 @@
       <phrase id="menutext" value="Designations" />
     </menu>
     <menu id="51">
-      <phrase id="menutext" value="Patients Management" />
+      <phrase id="menutext" value="Patients" />
     </menu>
     <menu id="48">
       <phrase id="menutext" value="All Patients" />
@@ -74,8 +71,11 @@
     <menu id="6">
       <phrase id="menutext" value="My Charges" />
     </menu>
+    <menu id="173">
+      <phrase id="menutext" value="Investigations" />
+    </menu>
     <menu id="52">
-      <phrase id="menutext" value="Laboratory Setup" />
+      <phrase id="menutext" value="Laboratory" />
     </menu>
     <menu id="11">
       <phrase id="menutext" value="Lab Specimens" />
@@ -92,8 +92,23 @@
     <menu id="12">
       <phrase id="menutext" value="Test Reports" />
     </menu>
+    <menu id="102">
+      <phrase id="menutext" value="Radiology" />
+    </menu>
+    <menu id="30">
+      <phrase id="menutext" value="Radiology Requests" />
+    </menu>
+    <menu id="31">
+      <phrase id="menutext" value="Radiology Test Details" />
+    </menu>
+    <menu id="32">
+      <phrase id="menutext" value="Radiology Queue" />
+    </menu>
+    <menu id="29">
+      <phrase id="menutext" value="Radiology Reports" />
+    </menu>
     <menu id="54">
-      <phrase id="menutext" value="Pharmacy Setup" />
+      <phrase id="menutext" value="Pharmacy" />
     </menu>
     <menu id="21">
       <phrase id="menutext" value="Medicine Suppliers" />
@@ -113,23 +128,8 @@
     <menu id="20">
       <phrase id="menutext" value="medicine dispensation details" />
     </menu>
-    <menu id="102">
-      <phrase id="menutext" value="Radiology Setup" />
-    </menu>
-    <menu id="30">
-      <phrase id="menutext" value="Radiology Requests" />
-    </menu>
-    <menu id="31">
-      <phrase id="menutext" value="Radiology Test Details" />
-    </menu>
-    <menu id="32">
-      <phrase id="menutext" value="Radiology Queue" />
-    </menu>
-    <menu id="29">
-      <phrase id="menutext" value="Radiology Reports" />
-    </menu>
     <menu id="53">
-      <phrase id="menutext" value="Financials Setup" />
+      <phrase id="menutext" value="Financials" />
     </menu>
     <menu id="26">
       <phrase id="menutext" value="Payment Methods" />
@@ -175,6 +175,9 @@
     </menu>
     <menu id="42">
       <phrase id="menutext" value="Medicine Stock" />
+    </menu>
+    <menu id="115">
+      <phrase id="menutext" value="Lab Report Minor" />
     </menu>
     <table id="appointments_report">
       <phrase id="tblcaption" value="Apporintments Report" />
@@ -545,7 +548,7 @@
         <phrase id="fldcaption" value="S/No" />
       </field>
       <field id="lab_test_requests_details_id">
-        <phrase id="fldcaption" value="Request Detais ID" />
+        <phrase id="fldcaption" value="Request Details ID" />
       </field>
       <field id="time">
         <phrase id="fldcaption" value="Time" />
