--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -137,6 +137,12 @@
     <menu id="175">
       <phrase id="menutext" value="Laboratory Bill" />
     </menu>
+    <menu id="237">
+      <phrase id="menutext" value="Radiology" />
+    </menu>
+    <menu id="238">
+      <phrase id="menutext" value="Radiology Bill" />
+    </menu>
     <menu id="53">
       <phrase id="menutext" value="Financials" />
     </menu>
@@ -1723,6 +1729,39 @@
       </field>
       <field id="service_name">
         <phrase id="fldcaption" value="Test Name" />
+      </field>
+      <field id="cost">
+        <phrase id="fldcaption" value="Cost (Kshs)" />
+      </field>
+    </table>
+    <table id="radiology_billing_report">
+      <phrase id="tblcaption" value="Radiology Billing" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="patient_id">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="visit_id">
+        <phrase id="fldcaption" value="Visit ID" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Date Added" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="radiology_billing_report_details">
+      <phrase id="tblcaption" value="Radiology Bill" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="radiology_request_id">
+        <phrase id="fldcaption" value="radiology request id" />
+      </field>
+      <field id="service_name">
+        <phrase id="fldcaption" value="Radiology Test" />
       </field>
       <field id="cost">
         <phrase id="fldcaption" value="Cost (Kshs)" />
