--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -143,6 +143,12 @@
     <menu id="238">
       <phrase id="menutext" value="Radiology Bill" />
     </menu>
+    <menu id="239">
+      <phrase id="menutext" value="Pharmacy" />
+    </menu>
+    <menu id="240">
+      <phrase id="menutext" value="Pharmacy Bill" />
+    </menu>
     <menu id="53">
       <phrase id="menutext" value="Financials" />
     </menu>
@@ -1765,6 +1771,51 @@
       </field>
       <field id="cost">
         <phrase id="fldcaption" value="Cost (Kshs)" />
+      </field>
+    </table>
+    <table id="pharmacy_billing_report">
+      <phrase id="tblcaption" value="Pharmacy Billing" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="patient_id">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="prescription_id">
+        <phrase id="fldcaption" value="Prescription ID" />
+      </field>
+      <field id="dispensation_type">
+        <phrase id="fldcaption" value="Type" />
+      </field>
+      <field id="status">
+        <phrase id="fldcaption" value="Status" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Date Added" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Date Updated" />
+      </field>
+    </table>
+    <table id="pharmacy_billing_report_details">
+      <phrase id="tblcaption" value="Pharmacy Bill" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="medicine_dispensation_id">
+        <phrase id="fldcaption" value="medicine dispensation id" />
+      </field>
+      <field id="brand_name">
+        <phrase id="fldcaption" value="Medicine Name" />
+      </field>
+      <field id="selling_price_per_unit">
+        <phrase id="fldcaption" value="SP (Kshs)" />
+      </field>
+      <field id="quantity">
+        <phrase id="fldcaption" value="Qty" />
+      </field>
+      <field id="line_total">
+        <phrase id="fldcaption" value="Line Total (Kshs)" />
       </field>
     </table>
   </project>
