--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -149,6 +149,9 @@
     <menu id="10">
       <phrase id="menutext" value="Invoices" />
     </menu>
+    <menu id="241">
+      <phrase id="menutext" value="Income" />
+    </menu>
     <menu id="9">
       <phrase id="menutext" value="invoice details" />
     </menu>
@@ -369,30 +372,27 @@
       </field>
     </table>
     <table id="expenses">
-      <phrase id="tblcaption" value="expenses" />
+      <phrase id="tblcaption" value="Expenses" />
       <field id="id">
-        <phrase id="fldcaption" value="id" />
+        <phrase id="fldcaption" value="S/NO" />
       </field>
       <field id="expense_title">
-        <phrase id="fldcaption" value="expense title" />
+        <phrase id="fldcaption" value="Expense Title" />
       </field>
       <field id="description">
-        <phrase id="fldcaption" value="description" />
+        <phrase id="fldcaption" value="Details" />
       </field>
       <field id="cost">
-        <phrase id="fldcaption" value="cost" />
+        <phrase id="fldcaption" value="Cost (Kshs)" />
       </field>
       <field id="attachment">
-        <phrase id="fldcaption" value="attachment" />
-      </field>
-      <field id="created_by_user_id">
-        <phrase id="fldcaption" value="created by user id" />
+        <phrase id="fldcaption" value="Attachment" />
       </field>
       <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
+        <phrase id="fldcaption" value="Date Added" />
       </field>
       <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
     <table id="invoice_details">
@@ -1816,6 +1816,31 @@
       </field>
       <field id="line_total">
         <phrase id="fldcaption" value="Line Total (Kshs)" />
+      </field>
+    </table>
+    <table id="income">
+      <phrase id="tblcaption" value="Income" />
+      <field id="id">
+        <phrase id="fldcaption" value="S/NO" />
+      </field>
+      <field id="income_title">
+        <phrase id="fldcaption" value="Income Title" />
+      </field>
+      <field id="description">
+        <phrase id="fldcaption" value="Details" />
+      </field>
+      <field id="cost">
+        <phrase id="fldcaption" value="Amount (Kshs)" />
+      </field>
+      <field id="invoice_attachment">
+        <phrase id="fldcaption" value="Invoice Attachment" />
+        <phrase id="custommsg" value="Attach invoice in pdf format" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Date Added" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Updated" />
       </field>
     </table>
   </project>
