Added expiry status on medicine stock

--- a/lang/afyaplus.en-US.xml
+++ b/lang/afyaplus.en-US.xml
@@ -182,8 +182,8 @@
     <menu id="104">
       <phrase id="menutext" value="Reports" />
     </menu>
-    <menu id="43">
-      <phrase id="menutext" value="Patient" />
+    <menu id="242">
+      <phrase id="menutext" value="Appointments Report" />
     </menu>
     <menu id="39">
       <phrase id="menutext" value="Appointments" />
@@ -203,7 +203,7 @@
     <menu id="115">
       <phrase id="menutext" value="Lab Report Minor" />
     </menu>
-    <table id="appointments_report">
+    <table id="appointments_report2">
       <phrase id="tblcaption" value="Apporintments Report" />
       <field id="id">
         <phrase id="fldcaption" value="Appointment ID" />
@@ -234,6 +234,9 @@
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
+      </field>
+      <field id="appointment_month">
+        <phrase id="fldcaption" value="appointment month" />
       </field>
     </table>
     <table id="departments">
@@ -775,6 +778,9 @@
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Update" />
       </field>
+      <field id="expiry_status">
+        <phrase id="fldcaption" value="Expiry Status" />
+      </field>
     </table>
     <table id="medicine_stock_report">
       <phrase id="tblcaption" value="medicine stock report" />
@@ -1065,48 +1071,6 @@
       </field>
       <field id="date_created">
         <phrase id="fldcaption" value="Registration Date" />
-      </field>
-      <field id="date_updated">
-        <phrase id="fldcaption" value="date updated" />
-      </field>
-    </table>
-    <table id="patients_report">
-      <phrase id="tblcaption" value="patients report" />
-      <field id="id">
-        <phrase id="fldcaption" value="id" />
-      </field>
-      <field id="first_name">
-        <phrase id="fldcaption" value="first name" />
-      </field>
-      <field id="last_name">
-        <phrase id="fldcaption" value="last name" />
-      </field>
-      <field id="national_id">
-        <phrase id="fldcaption" value="national id" />
-      </field>
-      <field id="date_of_birth">
-        <phrase id="fldcaption" value="date of birth" />
-      </field>
-      <field id="gender">
-        <phrase id="fldcaption" value="gender" />
-      </field>
-      <field id="phone">
-        <phrase id="fldcaption" value="phone" />
-      </field>
-      <field id="email_address">
-        <phrase id="fldcaption" value="email address" />
-      </field>
-      <field id="physical_address">
-        <phrase id="fldcaption" value="physical address" />
-      </field>
-      <field id="next_of_kin">
-        <phrase id="fldcaption" value="next of kin" />
-      </field>
-      <field id="next_of_kin_phone">
-        <phrase id="fldcaption" value="next of kin phone" />
-      </field>
-      <field id="date_created">
-        <phrase id="fldcaption" value="date created" />
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="date updated" />
@@ -1844,6 +1808,47 @@
       </field>
       <field id="date_updated">
         <phrase id="fldcaption" value="Last Updated" />
+      </field>
+    </table>
+    <table id="appointments_report">
+      <phrase id="tblcaption" value="Appointments Report" />
+      <chart id="appointmentssubmittedbymonth">
+        <phrase id="chartcaption" value="Appointments Submitted by Month" />
+        <phrase id="chartxaxisname" value="Appointment Month" />
+        <phrase id="chartyaxisname" value="Appointment Month" />
+      </chart>
+      <field id="id">
+        <phrase id="fldcaption" value="Appointment ID" />
+      </field>
+      <field id="patient_name">
+        <phrase id="fldcaption" value="Patient Name" />
+      </field>
+      <field id="date_of_birth">
+        <phrase id="fldcaption" value="Date of Birth" />
+      </field>
+      <field id="gender">
+        <phrase id="fldcaption" value="Gender" />
+      </field>
+      <field id="_title">
+        <phrase id="fldcaption" value="Title" />
+      </field>
+      <field id="doctor_name">
+        <phrase id="fldcaption" value="Doctor" />
+      </field>
+      <field id="start_date">
+        <phrase id="fldcaption" value="Start Date" />
+      </field>
+      <field id="end_date">
+        <phrase id="fldcaption" value="End Date" />
+      </field>
+      <field id="date_created">
+        <phrase id="fldcaption" value="Date Added" />
+      </field>
+      <field id="date_updated">
+        <phrase id="fldcaption" value="Last Updated" />
+      </field>
+      <field id="appointment_month">
+        <phrase id="fldcaption" value="appointment month" />
       </field>
     </table>
   </project>
